2007-03-02  Mike Cvet  <mcvet@redhat.com>

	* DOMFactory.java: General fixups with respect to moving
	StackFrame DOM info to its Line objects.
	* DOMSource.java: Ditto.

2007-02-27  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Fix bz #4104 and fully instrument
	it for debugging when "debug" is set to "true".

2007-02-27  Andrew Cagney  <cagney@redhat.com>

	* DOMFactory.java: Replace StackFrame .getSourceFile with Line
	.getFile.
	* DOMImage.java: Ditto.

2007-02-19  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java (enterFunctionBody): Fix errors with
	substring going beyond the end of the line.
	* DOMCommon.java (alreadyAdded): Fix adding duplicate includes,
	bz #4077.
	* DOMCommon.java: Correct javadoc and comments and pull debug
	statement.

2007-02-15  Rick Moseley  <rmoseley@redhat.com>

	* DOMFactory.java: Remove debug stuff.

2007-02-15  Rick Moseley  <rmoseley@redhat.com>

	* DOMCommon.java: New.
	* DomImage.java: Add addSource method to call parser when
	adding source element to DOM.
	* TestParser.java: Call methods in DOMCommon instead of 
	DOMFactory.
	* DOMFactory.java: Pull static methods out and put in DOMCommon.

2007-02-05  Andrew Cagney  <cagney@redhat.com>

	* TestParser.java: Replace frysk.junit.Paths with frysk.Config.

2007-01-22  Andrew Cagney  <cagney@redhat.com>

	* DOMFrysk.java: Delete commented out import java.util.Vector;

2007-01-09  Andrew Cagney  <cagney@redhat.com>

	* TestParser.java (NEWDOM, tearDown, tmpFile, testParser): Replace
	NEWDOM - the generated DOM's output - with a temporary file,
	delete during tearDown.
	(exec_path, BASEDOM, installed_list, includepaths, sourcelist)
	(root, data, dom, IMAGE_FILENAME, CC_FILE, which_file)
	(testParser): Re-implement testParser using List instead of
	array's, and Paths.getExecPrefix and Paths.getDataPrefix instead
	of Build.SRCDIR, Build.ABS_SRCDIR, and hardwired install paths.
	(checkPath, assertDomMatchesBase): Replace checkPath with